Fixed tag alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -190,6 +190,8 @@ h2.arrowed, h3.arrowed {
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
     border-radius:4px;
+    font-family: helvetica, arial, sans-serif;
+    line-height: 2;
   }
   a:hover{background:#555;}
 }
